--- a/contenido/sjf/styles/style.css
+++ b/contenido/sjf/styles/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .page-header{
-	background-color: coral;
+	background-color: #666;
 	color: #30303d;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
@@ -114,7 +114,7 @@ table, tr, th, td{
 	margin-left: 10px;
 	margin-top: 10px;		
 	font-size:24px;
-	color: coral;
+	color: #666;
 	word-spacing: 3px;
 	margin-bottom: 0;
 }
